Spend lots of time fixing things but eventually something works